--- a/StudentRecruiter/StudentRecruiter.csproj
+++ b/StudentRecruiter/StudentRecruiter.csproj
@@ -195,12 +195,35 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AdminController.cs" />
+    <Compile Include="Controllers\CandidateController.cs" />
     <Compile Include="Controllers\RecruitmentController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201912121443546_init.cs" />
+    <Compile Include="Migrations\201912121443546_init.Designer.cs">
+      <DependentUpon>201912121443546_init.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201912121553336_Candidate.cs" />
+    <Compile Include="Migrations\201912121553336_Candidate.Designer.cs">
+      <DependentUpon>201912121553336_Candidate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201912130438046_ModifiedCandidate.cs" />
+    <Compile Include="Migrations\201912130438046_ModifiedCandidate.Designer.cs">
+      <DependentUpon>201912130438046_ModifiedCandidate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\Domain\Address.cs" />
+    <Compile Include="Models\ApplicationDbContext.cs" />
+    <Compile Include="Models\Domain\Candidate.cs" />
+    <Compile Include="Models\Domain\Document.cs" />
+    <Compile Include="Models\Domain\DocumentType.cs" />
+    <Compile Include="Models\Enums\Role.cs" />
+    <Compile Include="Models\ViewModels\DocumentViewModels.cs" />
+    <Compile Include="Models\ViewModels\CandidateViewModels.cs" />
     <Compile Include="Models\ViewModels\AccountViewModels.cs" />
     <Compile Include="Models\Domain\IdentityModels.cs" />
     <Compile Include="Models\ViewModels\ManageViewModels.cs" />
@@ -267,6 +290,9 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Admin\Index.cshtml" />
+    <Content Include="Views\Candidate\Create.cshtml" />
+    <Content Include="Views\Candidate\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -284,6 +310,17 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201912121443546_init.resx">
+      <DependentUpon>201912121443546_init.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201912121553336_Candidate.resx">
+      <DependentUpon>201912121553336_Candidate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201912130438046_ModifiedCandidate.resx">
+      <DependentUpon>201912130438046_ModifiedCandidate.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
