--- a/StudentRecruiter/StudentRecruiter.csproj
+++ b/StudentRecruiter/StudentRecruiter.csproj
@@ -215,17 +215,37 @@
     <Compile Include="Migrations\201912130438046_ModifiedCandidate.Designer.cs">
       <DependentUpon>201912130438046_ModifiedCandidate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201912161826182_moreModels.cs" />
+    <Compile Include="Migrations\201912161826182_moreModels.Designer.cs">
+      <DependentUpon>201912161826182_moreModels.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201912161924377_candidateDetails.cs" />
+    <Compile Include="Migrations\201912161924377_candidateDetails.Designer.cs">
+      <DependentUpon>201912161924377_candidateDetails.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Domain\Address.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
-    <Compile Include="Models\Domain\Candidate.cs" />
+    <Compile Include="Models\Domain\Appliance.cs" />
+    <Compile Include="Models\Domain\ApplicationUser.cs" />
+    <Compile Include="Models\Domain\CandidateDetails.cs" />
     <Compile Include="Models\Domain\Document.cs" />
     <Compile Include="Models\Domain\DocumentType.cs" />
+    <Compile Include="Models\Domain\Exam.cs" />
+    <Compile Include="Models\Domain\ExamResult.cs" />
+    <Compile Include="Models\Domain\FieldOfStudy.cs" />
+    <Compile Include="Models\Domain\Recruitment.cs" />
+    <Compile Include="Models\Domain\RecruitmentPhase.cs" />
+    <Compile Include="Models\Domain\RecruitmentStatus.cs" />
+    <Compile Include="Models\Domain\School.cs" />
+    <Compile Include="Models\Domain\StudyLevel.cs" />
+    <Compile Include="Models\Domain\StudyType.cs" />
+    <Compile Include="Models\Domain\Subject.cs" />
     <Compile Include="Models\Enums\Role.cs" />
+    <Compile Include="Models\ViewModels\AddressViewModel.cs" />
     <Compile Include="Models\ViewModels\DocumentViewModels.cs" />
     <Compile Include="Models\ViewModels\CandidateViewModels.cs" />
     <Compile Include="Models\ViewModels\AccountViewModels.cs" />
-    <Compile Include="Models\Domain\IdentityModels.cs" />
     <Compile Include="Models\ViewModels\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -320,6 +340,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201912130438046_ModifiedCandidate.resx">
       <DependentUpon>201912130438046_ModifiedCandidate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201912161826182_moreModels.resx">
+      <DependentUpon>201912161826182_moreModels.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201912161924377_candidateDetails.resx">
+      <DependentUpon>201912161924377_candidateDetails.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
