--- a/StudentRecruiter/StudentRecruiter.csproj
+++ b/StudentRecruiter/StudentRecruiter.csproj
@@ -328,18 +328,21 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Admin\Index.cshtml" />
-    <Content Include="Views\Candidate\Create.cshtml" />
-    <Content Include="Views\Candidate\Edit.cshtml" />
+    <Content Include="Views\CandidateDetails\Create.cshtml" />
+    <Content Include="Views\CandidateDetails\Edit.cshtml" />
     <Content Include="Views\FieldOfStudies\Create.cshtml" />
     <Content Include="Views\FieldOfStudies\Delete.cshtml" />
     <Content Include="Views\FieldOfStudies\Details.cshtml" />
     <Content Include="Views\FieldOfStudies\Edit.cshtml" />
     <Content Include="Views\FieldOfStudies\Index.cshtml" />
+    <Content Include="Views\Users\Delete.cshtml" />
+    <Content Include="Views\Users\Details.cshtml" />
+    <Content Include="Views\Users\Edit.cshtml" />
+    <Content Include="Views\Users\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\Repositories\" />
-    <Folder Include="Views\CandidateDetails\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
