--- a/StudentRecruiter/StudentRecruiter.csproj
+++ b/StudentRecruiter/StudentRecruiter.csproj
@@ -264,6 +264,8 @@
     <Compile Include="Models\Domain\Subject.cs" />
     <Compile Include="Models\Enums\Role.cs" />
     <Compile Include="Models\ViewModels\AddressViewModel.cs" />
+    <Compile Include="Models\ViewModels\ExamResultViewModels.cs" />
+    <Compile Include="Models\ViewModels\ExamViewModels.cs" />
     <Compile Include="Models\ViewModels\DocumentViewModels.cs" />
     <Compile Include="Models\ViewModels\CandidateViewModels.cs" />
     <Compile Include="Models\ViewModels\AccountViewModels.cs" />
